Bug 156514 - Check spelling red underlines are gone (but spell checking still works)
Summary: Check spelling red underlines are gone (but spell checking still works)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+ Master
Hardware: All Linux (All)
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Spell-Checking
  Show dependency treegraph
 
Reported: 2023-07-29 07:45 UTC by Elmar
Modified: 2023-08-03 14:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example doc (35.95 KB, application/vnd.oasis.opendocument.text)
2023-07-29 07:49 UTC, Elmar
Details
settings 1 (41.68 KB, image/png)
2023-07-29 07:49 UTC, Elmar
Details
settings 2 (59.28 KB, image/png)
2023-07-29 07:49 UTC, Elmar
Details
setings 3 (22.31 KB, image/png)
2023-07-29 07:50 UTC, Elmar
Details
settings 1 for v7-3 (40.39 KB, image/png)
2023-07-29 07:52 UTC, Elmar
Details
settings 2 v7-3 (47.87 KB, image/png)
2023-07-29 07:53 UTC, Elmar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar 2023-07-29 07:45:09 UTC
Description:
Spelling mistakes are not highlighted

Steps to Reproduce:
1.open document
2.
3.

Actual Results:
spelling mistakes not highlighted

Expected Results:
should be


Reproducible: Always


User Profile Reset: No

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-GB
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 529dce3d5b695637a1ccc8b4b697d87c5db0d3a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded

However v7.3.7.2 work as should on same document
Comment 1 Elmar 2023-07-29 07:49:03 UTC
Created attachment 188630 [details]
example doc
Comment 2 Elmar 2023-07-29 07:49:31 UTC
Created attachment 188631 [details]
settings 1
Comment 3 Elmar 2023-07-29 07:49:53 UTC
Created attachment 188632 [details]
settings 2
Comment 4 Elmar 2023-07-29 07:50:19 UTC
Created attachment 188633 [details]
setings 3
Comment 5 Elmar 2023-07-29 07:52:48 UTC
Created attachment 188634 [details]
settings 1  for v7-3
Comment 6 Elmar 2023-07-29 07:53:20 UTC
Created attachment 188635 [details]
settings 2 v7-3
Comment 7 Elmar 2023-07-29 07:56:21 UTC
In menu, the check spelling is ticked.
Comment 8 Stéphane Guillou (stragu) 2023-07-29 08:28:09 UTC
Confirmed the regression. Wiggly underlines not shown in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 46d7119b8be03968017e59d882e5671350304e15
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But are present in:

Version: 7.6.0.1 (X86_64) / LibreOffice Community
Build ID: 776eaf34564cbf3f034a0ba1fd1d5c32ff9ccf1c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

However, spellcheck still works.

Bibisected with linux-64-24.2 repo to first bad commit 9f3048d5cbcdc65057731a31fffa6b6e58977010 which points to core commit:

commit af34f4ea62d8aabbab5d4028034aa2482c16fe8a
author	Noel Grandin Thu Jul 06 10:52:07 2023 +0200
committer	Noel Grandin Thu Jul 06 14:29:00 2023 +0200
avoid skia assert and slow-path
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154097

Noel, can you please have a look?
Comment 9 Commit Notification 2023-08-02 11:07:01 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37421677cea4969ffecdeb2a58488bae22f81782

tdf#156514 Check spelling red underlines are gone

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Stéphane Guillou (stragu) 2023-08-03 14:05:48 UTC
Fix verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eef0c5d4d45ba35acfb6d8f7551fe565ca4badaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Noel!