tdf#156514 Check spelling red underlines are gone

Regression from
    commit af34f4ea62d8aabbab5d4028034aa2482c16fe8a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Jul 6 10:52:07 2023 +0200
    avoid skia assert and slow-path

Change-Id: Ib81c7d341a88e72fb0a48a39703485261ac6679c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155217
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>